// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PausedTasksCard render with minimal props 1`] = `
<TasksDonutCard
  className=""
  data={
    Object {
      "last": 0,
      "older": 0,
    }
  }
  id="paused-tasks-card"
  query={Object {}}
  time="H24"
  title="Paused"
  updateQuery={[Function]}
  wantedQueryState="paused"
/>
`;

exports[`PausedTasksCard render with some props 1`] = `
<TasksDonutCard
  className=""
  data={
    Object {
      "last": 0,
      "older": 0,
    }
  }
  id="paused-tasks-card"
  query={Object {}}
  some="prop"
  time="H24"
  title="Paused"
  updateQuery={[Function]}
  wantedQueryState="paused"
/>
`;
